Fixed nav search bar expanding too much

--- a/UI/Web/src/app/nav/grouped-typeahead/grouped-typeahead.component.scss
+++ b/UI/Web/src/app/nav/grouped-typeahead/grouped-typeahead.component.scss
@@ -68,7 +68,7 @@ form {
     }
 
     &.focused {
-        width: 100%;
+        width: 99%;
         border-color: var(--input-focused-border-color);
     }
 
